--- a/index.html
+++ b/index.html
@@ -5,56 +5,21 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
     <title>Questions Aléatoires</title>
     <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <script src="bootstrap.bundle.min.js" type="text/javascript"></script>
-    <style>
-        body {
-            text-align: center;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        .random-animation {
-            font-size: 2em;
-            font-weight: bold;
-        }
-         .navbar
-         {
-             padding: .5rem 1rem;
-             .navbar-brand
-             {
-                 &.main
-                 {
-                     line-height: 18px;
-                     border-top: 1px solid white;
-                     border-bottom: 1px solid white;
-                     padding: 0;
-                     margin-right: 5px;
-                 }
-                 &.sub
-                 {
-                     border-left: 1px solid white;
-                     border-right: 1px solid white;
-                     padding: 0 5px 0 5px;
-                     font-size: 14px;
-                 }
-             }
-         }
-    </style>
 </head>
 <body style="height: 100vh;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand main" href="#" onclick="goToMain()">Questions<br>Aléatoires</a>
-            <span class="navbar-brand sub" onclick="goToMain()">❓</span>
+            <a class="navbar-brand main" href="#" onclick="showThemes()">Questions<br>Aléatoires</a>
+            <span class="navbar-brand sub" onclick="showThemes()">❓</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="goToMain()">
+                        <a class="nav-link" href="#" onclick="showThemes()">
                             🏠️ Accueil
                         </a>
                     </li>
@@ -69,7 +34,7 @@
     </nav>
 
 <div id="setup" class="hidden container">
-    <h2 style="margin-top: 20px;">➕ / ✏️ </h2>
+    <h2 style="margin-top: 20px;">➕ Ajouter un thème</h2>
     <div class="mb-3">
         <input type="text" id="themeName" class="form-control" placeholder="Nom du thème">
     </div>
@@ -83,7 +48,7 @@
 </div>
 
 <div id="empty" class="hidden container">
-    <div class="alert alert-danger" role="alert" style="margin-top: 20px;" onclick="modifyConfig()">
+    <div class="alert alert-danger" role="alert" style="margin-top: 20px; cursor: pointer;" onclick="modifyConfig()">
         Il n'existe aucun thème disponible.
         <h2 style="margin-top: 20px;">➕ Ajouter un thème</h2>
     </div>
@@ -101,162 +66,12 @@
     <nav class="navbar navbar-dark bg-dark navbar-expand fixed-bottom">
         <div class="container-fluid">
             <div class="d-flex w-100">
-                <button class="btn btn-danger w-50" style="height: 150px; margin-right: 1.25rem" onclick="newRandom()">⛔</button>
-                <button class="btn btn-success w-50" style="height: 150px; margin-left: 1.25rem" onclick="validateQuestion()">✅</button>
+                <button class="btn btn-danger w-50" style="height: 150px; margin-right: 1.25rem" onclick="newRandom()">&nbsp;</button>
+                <button class="btn btn-success w-50" style="height: 150px; margin-left: 1.25rem" onclick="validateQuestion()">&nbsp;</button>
             </div>
         </div>
     </nav>
 </div>
-
-<script>
-    let themes = JSON.parse(localStorage.getItem("themes")) || [];
-    let validatedQuestions = JSON.parse(localStorage.getItem("validated")) || {};
-    let currentTheme = null;
-
-    function closeNavbar() {
-        let navbarToggler = document.querySelector('.navbar-toggler');
-        let navbarCollapse = document.querySelector('.navbar-collapse');
-
-        if (navbarToggler && navbarCollapse.classList.contains('show')) {
-            navbarToggler.click();
-        }
-    }
-    function addTheme() {
-        closeNavbar()
-        const name = document.getElementById("themeName").value;
-        const count = parseInt(document.getElementById("questionCount").value);
-        if (name && count > 0) {
-            themes.push({id: themes.length + 1, name, questionCount: count});
-            localStorage.setItem("themes", JSON.stringify(themes));
-            document.getElementById("themeName").value = ''
-            document.getElementById("questionCount").value = ''
-            modifyConfig();
-        }
-    }
-
-    function clearStorage() {
-        closeNavbar()
-        if (window.confirm("Êtes vous sur ?")) {
-            localStorage.clear();
-            location.reload();
-        }
-    }
-
-    function modifyConfig() {
-        closeNavbar()
-        document.getElementById("empty").classList.add("hidden");
-        document.getElementById("main").classList.add("hidden");
-        document.getElementById("questionDisplay").classList.add("hidden");
-        document.getElementById("setup").classList.remove("hidden");
-        document.getElementById("themeList").innerHTML = '<h1 style="margin-top: 20px;">Thème existants</h1>' + themes.map(t => `<li class='list-group-item'>${t.name} - ${t.questionCount} questions <button class='btn btn-sm btn-outline-warning' onclick='editTheme(${t.id})'>✏️</button></li>`).join('');
-    }
-
-    function editTheme(id) {
-        closeNavbar()
-        document.getElementById("empty").classList.add("hidden");
-        document.getElementById("main").classList.add("hidden");
-        document.getElementById("questionDisplay").classList.add("hidden");
-        document.getElementById("setup").classList.remove("hidden");
-        const theme = themes.find(t => t.id === id);
-        if (theme) {
-            document.getElementById("themeName").value = theme.name;
-            document.getElementById("questionCount").value = theme.questionCount;
-            themes = themes.filter(t => t.id !== id);
-            localStorage.setItem("themes", JSON.stringify(themes));
-        }
-    }
-
-    function goToMain() {
-        showThemes();
-    }
-
-    function showThemes() {
-        closeNavbar()
-        document.getElementById("questionDisplay").classList.add("hidden");
-        document.getElementById("empty").classList.add("hidden");
-        document.getElementById("main").classList.add("hidden");
-        document.getElementById("setup").classList.add("hidden");
-        if (themes.length === 0) {
-            document.getElementById("empty").classList.remove("hidden");
-        } else {
-            document.getElementById("main").classList.remove("hidden");
-            document.getElementById("setup").classList.add("hidden");
-            const container = document.getElementById("themeButtons");
-            container.innerHTML = themes.map(t => {
-                const used = validatedQuestions[t.id] || [];
-                const available = Array.from({ length: t.questionCount }, (_, i) => i + 1).filter(q => !used.includes(q));
-                let done = (100 - (available.length * 100 / t.questionCount)).toFixed(2);
-
-                return `
-            <a class='btn btn-secondary d-block mb-2' onclick='startRandom(${t.id})'>
-                ${t.name} <br/>
-                ${t.questionCount - available.length} / ${t.questionCount} question(s)
-                <div class="progress mt-2" style="height: 10px;">
-                    <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: ${done}%" aria-valuenow="${done}" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-            </a>`;
-            }).join('');
-        }
-    }
-
-    function startRandom(themeId) {
-        closeNavbar()
-        currentTheme = themes.find(t => t.id === themeId);
-        const used = validatedQuestions[currentTheme.id] || [];
-        const available = Array.from({length: currentTheme.questionCount}, (_, i) => i + 1).filter(q => !used.includes(q));
-        let done = (100 - (available.length * 100 / currentTheme.questionCount)).toFixed(2)
-        document.getElementById("selectedTheme").innerText = currentTheme.name
-        document.getElementById("selectedPercent").innerHTML = `
-            <p class="text-center">${currentTheme.questionCount - available.length} / ${currentTheme.questionCount}</p>
-            <div class="progress mt-2" style="height: 10px;">
-                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: ${done}%" aria-valuenow="${done}" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>`
-        document.getElementById("main").classList.add("hidden");
-        document.getElementById("questionDisplay").classList.remove("hidden");
-        newRandom();
-    }
-
-    function newRandom() {
-        closeNavbar()
-        const used = validatedQuestions[currentTheme.id] || [];
-        const available = Array.from({length: currentTheme.questionCount}, (_, i) => i + 1).filter(q => !used.includes(q));
-        let done = (100 - (available.length * 100 / currentTheme.questionCount)).toFixed(2)
-        document.getElementById("selectedTheme").innerText = currentTheme.name
-        document.getElementById("selectedPercent").innerHTML = `
-            <p class="text-center">${currentTheme.questionCount - available.length} / ${currentTheme.questionCount}</p>
-            <div class="progress mt-2" style="height: 10px;">
-                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: ${done}%" aria-valuenow="${done}" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>`
-        if (available.length !== 0) {
-            animateRandom(available);
-        } else {
-            animateRandom(null);
-        }
-    }
-
-    function animateRandom(available) {
-        if (null === available) {
-            document.getElementById("randomNumber").innerText = '🎉';
-        } else {
-            let count = 10;
-            const interval = setInterval(() => {
-                document.getElementById("randomNumber").innerText = available[Math.floor(Math.random() * available.length)];
-                if (--count === 0) clearInterval(interval);
-            }, 100);
-        }
-    }
-
-    function validateQuestion() {
-        const questionNumber = parseInt(document.getElementById("randomNumber").innerText);
-        if (!validatedQuestions[currentTheme.id]) {
-            validatedQuestions[currentTheme.id] = [];
-        }
-        validatedQuestions[currentTheme.id].push(questionNumber);
-        localStorage.setItem("validated", JSON.stringify(validatedQuestions));
-        newRandom();
-    }
-
-    showThemes();
-</script>
+<script src="main.js" type="text/javascript"></script>
 </body>
 </html>
